@@ -1,6 +1,6 @@
-Bless - Gtk# Hex Editor v0.6.1
+Bless - Gtk# Hex Editor v0.6.2
 ==============================
-Copyright (c) 2004-2018, Alexandros Frantzis
+Copyright (c) 2004-2019, Alexandros Frantzis
 
 Thank you for using ( or at least trying out :) ) Bless!
 
